[package]
name = "tamanduapi"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "^1.0.3"
scraper = "^0.11.0"
futures = "0.3.1"
reqwest = "^0.10.0-alpha.2"
select = "~0.4.3"

[[bin]]
name = "tamanduacli"
path = "src/main.rs"
# required-features = ["bin"]
